Mon Oct 15 19:48:47 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/opensplice/Traits.cpp:

          BUGFIX: Placed the Windows-specific project settings within
          the prop:windows scope.

Sat Oct 13 21:20:48 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * cuts/iccm/arch/dds/servant/DDS_Publisher_T.cpp:
        * cuts/iccm/arch/dds/servant/DDS_Stateful_Writer_T.cpp:

          Fixed runtime errors, which were identified by validating the
          HelloWorld example for OpenSplice.

Sat Oct 13 18:49:42 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * cuts/iccm/arch/dds/servant/DDS_Servant_T.cpp:

          Fixed compilation errors on Windows.

        * cuts/iccm/arch/opensplice/servant:
        * cuts/iccm/arch/opensplice/servant/OpenSplice_skel_export.h:
        * cuts/iccm/arch/opensplice/servant/OpenSplice_stub_export.h:

          Removed these files.

Sat Oct 13 18:04:42 UTC 2012  James H Hill  <hillj at cs dot iupui dot edu>

        * cuts/iccm/arch/dds/servant/DDS_EventConsumer_T.h:
        * cuts/iccm/arch/dds/servant/DDS_EventConsumer_T.cpp:
        * cuts/iccm/arch/dds/servant/DDS_Event_Listener_T.h:
        * cuts/iccm/arch/dds/servant/DDS_Event_Listener_T.cpp:
        * cuts/iccm/arch/dds/servant/DDS_Publisher_T.h:
        * cuts/iccm/arch/dds/servant/DDS_Publisher_T.cpp:
        * cuts/iccm/arch/dds/servant/DDS_Publisher_Table_T.h:
        * cuts/iccm/arch/dds/servant/DDS_Publisher_Table_T.cpp:
        * cuts/iccm/arch/dds/servant/DDS_Servant_T.cpp:
        * cuts/iccm/arch/dds/servant/DDS_Stateful_Writer_T.h:
        * cuts/iccm/arch/dds/servant/DDS_Stateful_Writer_T.cpp:
        * cuts/iccm/arch/opensplice/servant/OpenSplice_EventConsumer_T.h:
        * cuts/iccm/arch/opensplice/servant/OpenSplice_EventConsumer_T.cpp:
        * cuts/iccm/arch/opensplice/servant/OpenSplice_Servant_T.inl:
