@@ -1,3 +1,11 @@
+Mon Oct 15 22:49:18 UTC 2012  James H Hill  <hillj at cs dot iupui dot edu>
+
+        * cuts/iccm/deployment/Component_Instance_Handler_T.cpp:
+
+	  BUGFIX: DAnCE v1.0.5 corrected the property name for component
+	  instance handlers. Added preprocessor statements to reflect this
+	  update/change.
+
 Mon Oct 15 19:48:47 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>
 
         * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/opensplice/Traits.cpp:
